# consoler2

./: CMakeLists.txt  runme.sh
consoler2/: Application.cpp  Application.h  CMakeLists.txt  QAbstractAnimation.h  QAbstractPlugin.h  QConsoler.cpp  QConsoler.h  QConsolerControl.cpp  QConsolerControl.h  QConsolerTasks.cpp  QConsolerTasks.h  QExplodeAnimation.cpp  QExplodeAnimation.h  QImplodeAnimation.cpp  QImplodeAnimation.h  QTaskPlugins.cpp  QTaskPlugins.h  Utils.h
libconsoler2-dummy/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/: Application.cpp  Application.h  CMakeLists.txt  MainView.cpp  MainView.h  Task.cpp  Task.h  TaskBrowser.cpp  TaskBrowser.h  TaskConsole.cpp  TaskConsole.h  TaskConsoleTmux.cpp  TaskConsoleTmux.h  Utils.cpp  Utils.h  View.cpp  View.h  ViewControl.cpp  ViewControl.h  ViewTask.cpp  ViewTask.h
